don't resize window to video

it looks weird, it jumps around weird, it doesn't work properly on
wayland

BUG: 461840